make <a class="button red"></a> work, remove scrollbar, fix disabled style

--- a/css/aristo.css
+++ b/css/aristo.css
@@ -37,7 +37,7 @@ input[type="radio"]:checked {
 }
 
 input[type="range"] {
-  -khtml-appearance: none; 
+  -khtml-appearance: none;
   -webkit-border-image: url(../images/slider-horizontal-track.png) 2 4 2 4 / 2px 4px 2px 4px repeat repeat;
   height: 5px;
   padding: 0;
@@ -55,7 +55,7 @@ textarea {
   -webkit-appearance: textfield;
   resize: none;
   padding: 4px;
-  /* 
+  /*
     Hack to make the same size as text inputs,
     since their native border isn't taken into
     account when calculating width.
@@ -66,7 +66,7 @@ textarea {
 select {
   -khtml-appearance: none;
   -webkit-user-select: none;
-  background: url(../images/select-updown.png) center right no-repeat, 
+  background: url(../images/select-updown.png) center right no-repeat,
               -webkit-gradient(linear, left top, left bottom, from(#F5F5F5), to(#CCCCCC));
   min-height: 24px;
   border: 1px solid #BDBDBD;
@@ -84,6 +84,9 @@ select:active {
   color: #8F8F8F;
 }
 
+a.awesome { text-decoration: none; }
+
+a.awesome,
 button {
   margin: 5px;
   -khtml-appearance: none;
@@ -99,7 +102,7 @@ button {
   border-width: 1px;
   border-style: solid;
   border-color: #AFAFAF #9A9A9A #828282 #9A9A9A;
-  
+
   background: #E9E9E9;
   background: -webkit-gradient(linear, left top, left bottom, from(#E9E9E9), to(#B8B8B7));
   background: -moz-linear-gradient(top, #E9E9E9, #B8B8B7);
@@ -107,7 +110,7 @@ button {
   -moz-box-shadow: inset 0 1px 1px #F5F5F5;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
-  
+
   transition: all .2s ease-in-out;
   -webkit-transition: all .2s ease-in-out;
   -moz-transition: all .2s ease-in-out;
@@ -122,6 +125,7 @@ button:focus {
   -moz-box-shadow: 0 0 7px rgba(0,0,0,0.4), inset 0 1px 0 rgba(255,255,255,0.5);
 }
 
+a.awesome.default, a.awesome.blue,
 button.default, button.blue {
   border-color: #7EA1B7 #5D7C8F #4C6B7E #5D7C8F;
   color: #1C4257;
@@ -131,6 +135,7 @@ button.default, button.blue {
   -webkit-box-shadow: inset 0 1px 1px #D9EDF9;
   -moz-box-shadow: inset 0 1px 1px #D9EDF9;
 }
+a.awesome.default:hover, a.awesome.blue:hover,
 button.default:hover, button.blue:hover,
 button.default:focus, button.blue:focus {
   box-shadow: 0 0 7px #53a6d5, inset 0 1px 0 rgba(255,255,255,0.5);
@@ -139,6 +144,7 @@ button.default:focus, button.blue:focus {
   -o-box-shadow: 0 0 7px #53a6d5, inset 0 1px 0 rgba(255,255,255,0.5);
 }
 
+a.awesome.red,
 button.red {
   color: #4F0F0E;
   background: #E56856;
@@ -149,6 +155,7 @@ button.red {
   text-shadow: 0 1px 1px #FA9287;
   border-color: #A2403E;
 }
+a.awesome.red:hover, a.awesome.red:focus,
 button.red:hover, button.red:focus {
   box-shadow: 0 0 7px #B94543, inset 0 1px 0 rgba(255,255,255,0.5);
   -webkit-box-shadow: 0 0 7px #B94543, inset 0 1px 0 rgba(255,255,255,0.5);
@@ -156,6 +163,7 @@ button.red:hover, button.red:focus {
   -o-box-shadow: 0 0 7px #B94543, inset 0 1px 0 rgba(255,255,255,0.5);
 }
 
+a.awesome.green,
 button.green {
   color: #374C29;
   background: #A9CD7E;
@@ -166,13 +174,14 @@ button.green {
   -moz-box-shadow: inset 0 1px 1px #CDE2B2;
   text-shadow: 0 1px 1px #C9DBB4;
 }
+a.awesome.green:hover, a.awesome.green:focus,
 button.green:hover, button.green:focus {
   box-shadow: 0 0 7px #81A558, inset 0 1px 0 rgba(255,255,255,0.5);
   -webkit-box-shadow: 0 0 7px #81A558, inset 0 1px 0 rgba(255,255,255,0.5);
   -moz-box-shadow: 0 0 7px #81A558, inset 0 1px 0 rgba(255,255,255,0.5);
   -o-box-shadow: 0 0 7px #81A558, inset 0 1px 0 rgba(255,255,255,0.5);
 }
-
+a.awesome:active:not(:disabled),
 button:active:not(:disabled) {
   border-color: #B6B6B6 #989898 #AEAEAE #989898;
   background: #B6B6B6;
@@ -182,6 +191,7 @@ button:active:not(:disabled) {
   -moz-box-shadow: inset 0 -1px 1px #F4F4F4;
 }
 
+a.awesome:active:not(:disabled), a.awesome.blue:active:not(:disabled),
 button.default:active:not(:disabled), button.blue:active:not(:disabled) {
   border-color: #4A697C #618296 #7B9FB5 #618296;
   background: #76A0B9;
@@ -191,6 +201,7 @@ button.default:active:not(:disabled), button.blue:active:not(:disabled) {
   -moz-box-shadow: inset 0 -1px 1px #D8EDF8;
 }
 
+a.awesome.red:active:not(:disabled),
 button.red:active:not(:disabled) {
   border-color: #A2403E;
   background: #B94543;
@@ -200,6 +211,7 @@ button.red:active:not(:disabled) {
   -moz-box-shadow: inset 0 -1px 1px #F4C3BD;
 }
 
+a.awesome.green:active:not(:disabled),
 button.green:active:not(:disabled) {
   color: #374C29;
   background: #81A558;
@@ -210,6 +222,7 @@ button.green:active:not(:disabled) {
   -moz-box-shadow: inset 0px -1px 1px #CDE2B2;
 }
 
+a.awesome:disabled, a.awesome:hover:disabled,
 button:disabled, button:hover:disabled {
   opacity: 0.5;
   box-shadow: none;
@@ -218,7 +231,7 @@ button:disabled, button:hover:disabled {
   -o-box-shadow: none;
   cursor: default;
 }
-
+/*
 ::-webkit-scrollbar {
   width: 17px;
   height: 17px;
@@ -284,22 +297,23 @@ button:disabled, button:hover:disabled {
 ::-webkit-scrollbar-button:end:increment {
     display: block;
 }
- 
+
 /* Turn off the down area up on top, and up area on bottom */
 ::-webkit-scrollbar-button:start:increment,
 ::-webkit-scrollbar-button:end:decrement {
     display: none;
 }
-
-::-webkit-slider-thumb { 
-  -khtml-appearance: none; 
-  background: url(../images/slider-knob.png) no-repeat; 
-  width: 23px; 
+SCROLLBAR = UGLY
+*/
+::-webkit-slider-thumb {
+  -khtml-appearance: none;
+  background: url(../images/slider-knob.png) no-repeat;
+  width: 23px;
   height: 24px;
 }
 
 /*This doesn't seem to be implemented yet*/
-::-webkit-slider-thumb:active { 
+::-webkit-slider-thumb:active {
   background: url(../images/slider-knob-highlighted.png) no-repeat;
 }
 
